
gbsplay HISTORY


2025/xx/xx  -  0.0.100
~~~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- build process:
  - fix manpage handling when version number contains a /
  - make 'install-*' targets self-contained
  - remove xgbsplay binary on 'make distclean'


2025/03/15  -  0.0.99
~~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- configuration:
  - fix the deprecated 'loop' option to work as described in the manpage:
    'loop=2' selects range loop mode, not single loop mode

- build process:
  - fix version number detection in GitHub CI builds

Enhancements:

- automatically build Windows binaries and add them to the GitHub
  release page (marked experimental for now)

- xgbsplay:
  - loop mode can be changed interactively (use the 'l' key)
  - display pause status when playback is paused
  - display current loop mode
  - add i18n

- configuration:
  - deprecate 'loop' option in gbsplayrc in favor of new 'loop_mode'
    with values 'none', 'range' and 'single'
  - add 'play_mode' option to gbsplayrc with values 'linear', 'random'
    and 'shuffle'
  - support 'native', 'little' and 'big' values for 'endian' option in
    gbsplayrc instead of just 'n', 'l' and 'b'

- documentation:
  - describe loop mode keybinding in gbsplay(1) manpage
  - describe 'filter_type' option in gbsplayrc(5) manpage
  - add LICENCE to tarball


2025/02/16  -  0.0.98
~~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- gbsplay:
  - don't mess up the screen with underrun errors from the ALSA plugout
    when resuming from a pause
  - fix Pipewire plugout for Pipewire versions greater than 0.3.x

- build process:
  - fix i18n on brew/MaOS
  - disable i8n during unit tests

Enhancements:

- gbsplay:
  - add proper pause handling to ALSA plugout

- contrib:
  - add Zsh command completion for gbsplay, gbsinfo, gbs2gb and gbs2ogg
  - add missiong options to bash completion script and fix some edge cases

- documentation:
  - document -- option to end option parsing
  - update xgbsplay(1) manpage


2024/04/17  -  0.0.97