@@ -12,6 +12,11 @@ Bugfixes:
   - make 'install-*' targets self-contained
   - remove xgbsplay binary on 'make distclean'
 
+Enhancements:
+
+- build process:
+  - show installation target directories via 'make show-install-dirs'
+
 
 2025/03/15  -  0.0.99
 ~~~~~~~~~~~~~~~~~~~~~
